--- a/taboo.html
+++ b/taboo.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>משחק טאבו</title>
-	<link rel="stylesheet" href="style/style.css" type="text/css"/>
+	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 	<section id="tabooApp">
@@ -44,6 +44,8 @@
 			<p id="debugP">
 		</div>
 	</section>
+	<script src="http://code.jquery.com/jquery-latest.js"></script>
+	<script src="bootstrap/js/bootstrap.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
