more ui changes

--- a/taboo.html
+++ b/taboo.html
@@ -27,33 +27,33 @@
 		</div>
 		<div id="gameCard1" class="container well" style="text-align: center;" dir="ltr">
 			<div class="btn-group btn-group-vertical">
-				<a id="cardWord" style="width:200px;" class="btn btn-large btn-primary">פרה</a>
-				<a id="cardTaboo1" style="width:200px;" class="btn btn-info">חלב</a>
-				<a id="cardTaboo2" style="width:200px;" class="btn btn-info">חיה</a>
-				<a id="cardTaboo3" style="width:200px;" class="btn btn-info">מוו</a>
-				<a id="cardTaboo4" style="width:200px;" class="btn btn-info">רפת</a>
+				<a id="cardWord" style="width:200px;" class="btn btn-large btn-success">פרה</a>
+				<a id="cardTaboo1" style="width:200px;" class="btn btn-danger">חלב</a>
+				<a id="cardTaboo2" style="width:200px;" class="btn btn-danger">חיה</a>
+				<a id="cardTaboo3" style="width:200px;" class="btn btn-danger">מוו</a>
+				<a id="cardTaboo4" style="width:200px;" class="btn btn-danger">רפת</a>
 			</div>
 		</div>
 		<div class="container well" dir="ltr">
 			<div id="roundControls" class="row-fluid">
 				<div class="span4">
-					<button class="btn btn-warning btn-large btn-block" id="passButton">עבור</button>
+					<button class="btn btn-warning btn-block" id="passButton">עבור</button>
 				</div>
-				<div class="span4">
-					<button class="btn btn-danger btn-large btn-block" id="wrongButton">טעות</button>
+				<div class="span4 hidden-phone">
+					<button class="btn btn-danger btn-block" id="wrongButton">טעות</button>
 				</div>
-				<div class="span4">
-					<button class="btn btn-success btn-large btn-block" id="correctButton">נכון</button>
+				<div class="span4 hidden-phone">
+					<button class="btn btn-success btn-block" id="correctButton">נכון</button>
 				</div>
 			</div>
 		</div>
 		<div class="container well">
 			<div id="gameControls" class="row-fluid">
 				<div class="span6">
-					<button class="btn btn-inverse btn-large btn-block" id="resetButton">אפס משחק</button>
+					<button class="btn btn-inverse btn-block" id="resetButton">אפס משחק</button>
 				</div>
 				<div class="span6">
-					<button class="btn btn-primary btn-large btn-block" id="startButton">התחל סיבוב</button>
+					<button class="btn btn-primary btn-block" id="startButton">התחל סיבוב</button>
 				</div>		
 			</div>
 		</div>
